# startup_appspawn_fork

./: BUILD.gn  OAT.xml  appdata-sandbox-app.json  appdata-sandbox-asan.json  appdata-sandbox-nweb.json  appdata-sandbox.json  appdata-sandbox64.json  appspawn.cfg  appspawn.gni  appspawn_preload.json  appspawn_preload_ets.json  asan.options  bundle.json  nweb_shared_relro.cfg  nwebspawn.cfg
adapter/: appspawn_ace.cpp  appspawn_adapter.cpp  appspawn_adapter.h  appspawn_log.cpp  appspawn_nweb.cpp  appspawn_sandbox.cpp  appspawn_silk.cpp  appspawn_silk.h  nwebspawn_lancher.cpp  nwebspawn_lancher.h
common/: .appspawn_server.h.swp  appspawn_server.c  appspawn_server.h  webview_loader.cpp  webview_loader.h
etc/: BUILD.gn
etc/preload/: appspawn_preload_merger.gni  appspawn_preload_merger.py  appspawn_preload_merger.pydeps
etc/sandbox/: appdata_sandbox_fixer.py
include/: appspawn_server.h
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/client/: appspawn_socket.cpp  client_socket.cpp
interfaces/innerkits/hnp/include/: hnp_api.h
interfaces/innerkits/hnp/src/: hnp_api.c
interfaces/innerkits/include/: appspawn_monut_permission.h  appspawn_mount_permission.h  appspawn_msg.h  appspawn_service.h  appspawn_socket.h  client_socket.h
interfaces/innerkits/src/: appspawn_monut_permission.c  appspawn_mount_permission.cpp
interfaces/innerkits_new/client/: BUILD.gn  appspawn_client.c  appspawn_client.h  appspawn_msg.c  libappspawn_client.versionscript
interfaces/innerkits_new/include/: appspawn.h
interfaces/innerkits_new/module_engine/: BUILD.gn
interfaces/innerkits_new/module_engine/include/: appspawn_hook.h  appspawn_msg.h
interfaces/innerkits_new/module_engine/stub/: libappspawn.stub.json
interfaces/innerkits_new/permission/: appspawn_mount_permission.c  appspawn_mount_permission.cpp  appspawn_mount_permission.h
lite/: BUILD.gn  appspawn_message.c  appspawn_message.h  appspawn_process.c  appspawn_server.h  appspawn_service.c  bundle.json  main.c
modules/ace_adapter/: BUILD.gn  ace_adapter.cpp
modules/asan/: BUILD.gn  asan_detector.c
modules/common/: BUILD.gn  appspawn_adapter.cpp  appspawn_adapter.h  appspawn_cgroup.c  appspawn_common.c  appspawn_namespace.c  appspawn_silk.cpp  appspawn_silk.h
modules/module_engine/include/: appspawn_hook.h  appspawn_msg.h
modules/module_engine/stub/: libappspawn.stub.json
modules/modulemgr/: appspawn_modulemgr.c  appspawn_modulemgr.h
modules/nweb_adapter/: BUILD.gn  nwebspawn_adapter.cpp
modules/sandbox/: BUILD.gn  appspawn_mount_template.c  appspawn_permission.c  appspawn_sandbox.c  appspawn_sandbox.h  sandbox_cfgvar.c  sandbox_expand.c  sandbox_expand.cpp  sandbox_load.c  sandbox_load.cpp  sandbox_manager.c  sandbox_utils.cpp
modules/sysevent/: BUILD.gn  event_reporter.cpp
modules/threadpool/: BUILD.gn  thread_manager.c  thread_manager.h
nweb_shared_relro/: main.c
service/hnp/: BUILD.gn  hnp_main.c
service/hnp/base/: hnp_base.h  hnp_file.c  hnp_log.c  hnp_sal.c
service/hnp/installer/include/: hnp_installer.h
service/hnp/installer/src/: hnp_installer.c
service/hnp/pack/include/: hnp_pack.h
service/hnp/pack/src/: hnp_pack.c
src/: appspawn_server.cpp  main.cpp
src/include/: appspawn_server.h  server_socket.h
src/socket/: appspawn_socket.cpp  client_socket.cpp  server_socket.cpp
standard/: BUILD.gn  appspawn_appmgr.c  appspawn_main.c  appspawn_manager.h  appspawn_msgmgr.c  appspawn_process.c  appspawn_service.c  appspawn_service.h  main.c  nwebspawn_launcher.c  pidNsInit.c  pid_ns_init.c
test/: .BUILD.gn.swp  BUILD.gn
test/mock/: app_spawn_stub.cpp  app_spawn_stub.h  app_system_stub.c  js_runtime.h
test/moduletest/: BUILD.gn  appspawn_client_test.cpp  appspawn_module_test.cpp  appspawn_test_client.h  appspawn_test_cmd.cpp  appspawn_test_cmder.cpp  appspawn_test_cmder.h  test_app_info.json  test_req_info.json
test/moduletest/plugin-sample/: appspawn_plugin_sample.c
test/moduletest/threadpool/: BUILD.gn
test/sandbox_new/: sandbox.json  staged_sandbox.c
test/testplugin/: BUILD.gn  appspawn_test_plugin.c
test/unittest/: BUILD.gn  app_spawn_stub.cpp  app_spawn_stub.cpp.rej  app_spawn_stub.h  app_spawn_test_helper.cpp  app_spawn_test_helper.h  cover_utils.sh  gencoverage.sh
test/unittest/app_spawn_client_test/: BUILD.gn  app_spawn_client_test.cpp  app_spawn_interface_test.cpp
test/unittest/app_spawn_lite_test/: BUILD.gn  app_spawn_lite_test.cpp
test/unittest/app_spawn_msg_peer_test/: app_spawn_msg_peer_test.cpp
test/unittest/app_spawn_server_test/: BUILD.gn  app_spawn_server_override_test.cpp
test/unittest/app_spawn_socket_test/: BUILD.gn  app_spawn_socket_test.cpp
test/unittest/app_spawn_standard_test/: BUILD.gn  app_spawn_appmgr_test.cpp  app_spawn_cgroup_test.cpp  app_spawn_child_test.cpp  app_spawn_cold_run_test.cpp  app_spawn_command_lexer_test.cpp  app_spawn_module_common_test.cpp  app_spawn_module_interface_test.cpp  app_spawn_sandbox_expand_test.cpp  app_spawn_sandbox_load_test.cpp  app_spawn_sandbox_mount_test.cpp  app_spawn_sandbox_new_test.cpp  app_spawn_sandbox_test.cpp  app_spawn_sandboxmgr_test.cpp  app_spawn_service_test.cpp  app_spawn_standard_test.cpp  nweb_spawn_service_test.cpp  spawn_native_process_test.cpp
test/unittest/client_socket_test/: BUILD.gn
test/unittest/server_socket_test/: server_socket_test.cpp
tools/: appspawn_start_app.cpp
util/: BUILD.gn
util/include/: appspawn_utils.h  json_utils.h  sandbox_utils.h
util/src/: appspawn_base64.c  appspawn_utils.c  json_utils.c  json_utils.cpp  sandbox_utils.cpp
